# BlockProcessing

./: .gitignore  CMakeLists.txt
Assets/Shader/: Lighting-Simple.glsl  Lighting-Texture-Atlas.glsl  Lighting-Texture.glsl  Material-Texture-Lighting.glsl  Material-Texture.glsl  Model.glsl  TerrainShader.glsl  TextShader.glsl  TexturePass.glsl
Assets/Shader/Gui/: CrosshairShader.glsl
Assets/Shader/Post/: PostBlurVertical.glsl
Assets/Shader/SkyBox/: SkyBox.glsl
Assets/Shader/Terrain/: ChunkBorderShader.glsl  LineShader.glsl  OctreeVisualizeShader.glsl  TerrainShader.glsl
Assets/Textures/: Atlas.bif  grass_side.bif  grass_top.bif  stone.bif
BlockProcessing/: BlockProcessing.cpp  Paths.h
BlockProcessing/Application/: Application.cpp  Application.h  ApplicationLoop.cpp  ApplicationOnEvent.cpp
BlockProcessing/Engine/: ShaderPaths.h
BlockProcessing/Engine/2D/Model2D/: Model2D.cpp  Model2D.h
BlockProcessing/Engine/2D/Transform2D/: Transform2D.cpp  Transform2D.h
BlockProcessing/Engine/3D/Camera/: CameraFirstPerson.cpp  CameraFirstPerson.h
BlockProcessing/Engine/3D/Model3D/: Mesh3D.cpp  Mesh3D.h  Model3D.cpp  Model3D.h
BlockProcessing/Engine/3D/Transform3D/: Transform3D.cpp  Transform3D.h
BlockProcessing/Engine/PostProcess/: PostProcessManager.cpp  PostProcessManager.h
BlockProcessing/Engine/PostProcess/Effects/: ContrastEffect.cpp  GaussianBlurEffect.cpp  GaussianBlurEffect.h  PostProcessEffect.h
BlockProcessing/FrameWork/: Application.cpp  Application.h  ApplicationEvent.cpp  WindowHandler.cpp  WindowHandler.h
BlockProcessing/FrameWork/Window/: Window.cpp  Window.h
BlockProcessing/Game/: BlockProcessing.cpp  BlockProcessing.h  BlockProcessingEvents.cpp
BlockProcessing/Game/Block/: Block.h
BlockProcessing/Game/Block/Blocks/: BlockAir.cpp  BlockAir.h  BlockGrass.cpp  BlockGrass.h
BlockProcessing/Game/Command/: Command.cpp  Command.h  CommandManager.cpp  CommandManager.h
BlockProcessing/Game/Command/Commands/: CommandTP.cpp  CommandTP.h
BlockProcessing/Game/Debug/ChunkBorder/: ChunkBorder.h  ChunkBorderManager.cpp  ChunkBorderManager.h  ChunkBorderVisualizer.cpp  (+1 more)
BlockProcessing/Game/Event/: EventBase.h  EventManager.h
BlockProcessing/Game/Interface/: DebugInterface.cpp  DebugInterface.h  Interface.cpp  Interface.h  InterfaceManager.cpp  InterfaceManager.h  Messages.h
BlockProcessing/Game/Player/: Player.cpp  Player.h  PlayerBlockOutline.cpp  PlayerBlockOutline.h  PlayerCamera.cpp  PlayerCamera.h  PlayerDefines.h
BlockProcessing/Game/PostProcess/: PostProcessManager.cpp  PostProcessManager.h
BlockProcessing/Game/Terrain/: Chunk.cpp  Chunk.h  ChunkBlock.h  CubeManager.cpp  CubeManager.h  CubeMesher.cpp  CubeMesher.h  TerrainDefines.h  TerrainManager.cpp  TerrainManager.h
Client/Assets/Shader/: ChunkBorderShader.glsl  CloudShader.glsl  LineShader.glsl  OctreeShader.glsl  SkyBox.glsl  TerrainShader.glsl
Client/BlockProcessing/: Paths.h
Client/BlockProcessing/FrameWork/: Application.cpp  Application.h  ApplicationEvent.cpp
Client/BlockProcessing/Framework/: Application.cpp  Application.h  ApplicationEvent.cpp
Client/BlockProcessing/Game/: BlockProcessing.cpp  BlockProcessing.h  BlockProcessingEvents.cpp  Input.h  Paths.h
Dependencies/Audio/include/: Audio.h  MiniAudio.h
Dependencies/FastNoise/: FastNoise.h
Dependencies/Math/: Matrix.h  Vector.h
Dependencies/MathExtension/include/: MathExtension.h
Dependencies/Network/include/: Core.h  TCPConnection.h
Dependencies/OPENAL/cmake/: FindWindowsSDK.cmake
Dependencies/OpenGL/include/: Buffer.h  Texture.cpp  Texture.h
Dependencies/UI/include/: UIManager.cpp  UIManager.h  UIShader.h
Dependencies/ks-Lib-0.3.8.2/include/: Library.hpp
Server/BlockProcessing/: Application.cpp  Application.h  BlockProcessing.cpp  Server.cpp  Server.h
Server/BlockProcessing/Server/: BlockProcessing.cpp  BlockProcessing.h  PlayerManager.cpp  PlayerManager.h  Server.cpp  Server.h
(+465 files in other folders)
